# HACKATHON-II

./: .gitignore  README.md  main.py  start-backend.sh  start-frontend.sh
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: config.py  db.py  main.py
backend/app/models/: task.py
backend/app/routes/: auth.py
backend/app/schemas/: task.py
frontend/: package.json
frontend/app/: page.tsx
frontend/hooks/: useMediaQuery.ts
frontend/lib/: api.ts  auth.ts  types.ts  utils.ts
phase-1/src/: __init__.py
phase-2/: .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md
phase-2/backend/: alembic.ini
phase-3/: .gitignore  Makefile  README.md
phase-3/backend/: .dockerignore  .env.example  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements.hf.txt  requirements.txt
phase-3/backend/.vercel/: project.json
phase-3/backend/alembic/: env.py
phase-3/backend/alembic/versions/: 4279c106292c_initial_tables.py
phase-3/backend/api/: index.py
phase-3/backend/app/: main.py
phase-3/backend/app/agents/: todo_agent.py
phase-3/backend/app/api/: schemas.py
phase-3/backend/app/api/routes/: auth.py  chat.py  conversations.py  profile.py  stats.py  tasks.py
phase-3/backend/app/core/: config.py  database.py
phase-3/backend/app/mcp/: server.py
phase-3/backend/app/mcp/tools/: add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
phase-3/backend/app/models/: __init__.py  conversation.py  message.py  task.py  user.py
src/: cli.py  models.py  storage.py  validators.py
(+135 files in other folders)
