[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "better-auth>=0.0.1b11",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "openai-agents>=0.7.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.31",
    "tenacity>=9.0.0",
    "uvicorn>=0.40.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E712"]  # SQLAlchemy requires == True/False for column filters

[tool.pytest.ini_options]
asyncio_mode = "auto"
